--- a/auth/package.json
+++ b/auth/package.json
@@ -7,17 +7,18 @@
     "start": "ts-node-dev --poll src/index.ts",
     "test": "jest --watchAll --no-cache"
   },
-  "jest":{
-    "preset" : "ts-jest",
-    "testEnvironment" : "node",
-    "setupFilesAfterEnv" : [
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
       "./src/test/setup.ts"
     ]
-  }, 
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@jjtickets2021/common": "^1.0.4",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
