--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -24,6 +24,13 @@ spec:
                 name: tickets-srv
                 port:
                   number: 5001
+          - path: /api/orders/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: orders-srv
+                port:
+                  number: 5001
           - path: /?(.*)
             pathType: Prefix
             backend:
