worker service for order creation using redis and bulljs

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -51,3 +51,13 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: jibujacob/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+        # cliFlags:
+        #   - --platform=linux/amd64
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
