--- a/payments/package.json
+++ b/payments/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --poll --files src/index.ts",
+    "start": "ts-node-dev --poll  src/index.ts",
     "test": "jest --watchAll --no-cache"
   },
   "jest": {
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
     "cookie-session": "^2.0.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.0",
@@ -30,6 +31,7 @@
     "mongoose": "^6.1.3",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^8.195.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   },
