--- a/.github/workflows/tests-payments.yml
+++ b/.github/workflows/tests-payments.yml
@@ -8,4 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - env: # Or as an environment variable
+          credentials: ${{ secrets.STRIPE_KEY }}
       - run: cd payments && npm install && npm run test:ci
