--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -5,15 +5,20 @@ on:
     branches:
       - main
     paths:
-      - 'auth/**'
+      - "auth/**"
 jobs:
   build:
-    runs-on:  ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
-      - uses:  actions/checkout@v2
-      - run:  cd auth && docker build -t jibujacob/auth .
-      - run:  docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - uses: actions/checkout@v2
+      - run: cd auth && docker build -t jibujacob/auth .
+      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
         env:
-          DOCKER_USERNAME:  ${{secrets.DOCKER_USERNAME}}
-          DOCKER_PASSWORD:  ${{secrets.DOCKER_PASSWORD}}
+          DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       - run: docker push jibujacob/auth
+      - uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{secrets.DIGITALOCEAN_ACCESS_TOKEN}}
+      - run: doctl kubernetes cluster kubeconfig save ticketing
+      - run: kubectl rollout restart deployment auth-depl
